--- a/sdesktop.qrc
+++ b/sdesktop.qrc
@@ -5,5 +5,6 @@
         <file>pic/loginBg.jpg</file>
         <file>pic/cloud.png</file>
         <file>qml/startup.qml</file>
+        <file>qml/userinfo.qml</file>
     </qresource>
 </RCC>
